# PyTopo3D

./: .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  README.md  RELEASING.md  main.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  publish.yml
docs/literature-reviews/: 0.3.0-implementation-plan.md  optimizer-survey.md
pytopo3d/cli/: command.py
pytopo3d/core/: evaluator.py  optimizer.py
pytopo3d/preprocessing/: geometry.py
pytopo3d/utils/: assembly.py  axis_convention.py  boundary.py  export.py  filter.py  import_design_space.py  oc_update.py
tests/: _generate_golden.py  cases.py  conftest.py  test_cpu_smoke.py  test_force_direction.py  test_gradient_check.py  test_imports.py  test_packaging.py  test_physics_anchor.py  test_regression.py  test_stl_orientation.py  test_stl_resolution.py
tests/data/: golden_small_case.npz
tests/gpu/: README.md  slurm_gpu_test.sbatch  test_cpu_gpu_parity.py
