[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytopo3d"
version = "0.1.1"
description = "3D SIMP Topology Optimization Framework for Python"
readme = "README.md"
authors = [
    {name = "Jihoon Kim", email = "jihoon.kim@kaist.ac.kr"},
    {name = "Namwoo Kang", email = "nwkang@kaist.ac.kr"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["topology optimization", "SIMP", "structural optimization", "3D", "finite element"]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-image",
    "networkx",
    "pillow",
    "plotly",
    "tqdm",
    "trimesh",
    "psutil",
    "pypardiso",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
]
gpu = [
    # The [ctk] extra bundles the CUDA toolkit (libraries + headers) as wheels, so GPU
    # acceleration works without a separate system CUDA install. For CUDA 11.x, use
    # cupy-cuda11x[ctk] instead.
    "cupy-cuda12x[ctk]",
]

[project.urls]
"Homepage" = "https://github.com/jihoonkim888/PyTopo3D"
"Bug Tracker" = "https://github.com/jihoonkim888/PyTopo3D/issues"
"Documentation" = "https://github.com/jihoonkim888/PyTopo3D"
"Source Code" = "https://github.com/jihoonkim888/PyTopo3D"

# Package discovery must be explicit: the repo has a flat layout with several
# top-level dirs (tests/, examples/, scripts/, assets/). Without this, a build
# either ships an empty package or errors on ambiguous discovery -- the root cause
# of issue #6, which previously shipped a package containing no modules.
[tool.setuptools.packages.find]
include = ["pytopo3d*"]
